--- a/tools/benchmark/Cargo.toml
+++ b/tools/benchmark/Cargo.toml
@@ -13,7 +13,7 @@ log = "0.4"
 env_logger = "0.7"
 lazy_static = "1.4"
 num_cpus = "1.11"
-rand = "0.7"
+rand = { version = "0.7", features = ["small_rng"] }
 aerospike = { path = "../.." }
 
 [[bin]]
